--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com.hk/citations?hl=zh-CN&pli=1&user=nvf9kZoAAAAJ"
   impactstory      : # URL
-  orcid            : "https://orcid.org/0000-0002-4900-8973"
+  orcid            : https://orcid.org/0000-0002-4900-8973
   semantic         : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
