--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Academic Pages of Zhu Meng"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : "南昌大学博士"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://mengzhu0308.github.io/mengzhu0308.githup.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "https://github.com/mengzhu0308/mengzhu0308.githup.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -35,7 +35,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com.hk/citations?hl=zh-CN&pli=1&user=nvf9kZoAAAAJ"
   impactstory      : # URL
-  orcid            : https://orcid.org/0000-0002-4900-8973
+  orcid            : "https://orcid.org/0000-0002-4900-8973"
   semantic         : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
