--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Academic Pages of Zhu Meng"
+title                    : "Academic Pages of Meng Zhu"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : "南昌大学博士"
