--- a/_config.yml
+++ b/_config.yml
@@ -77,12 +77,16 @@ author:
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
-  books:
+  book:
     title: 'Books'
-  manuscripts:
+  article:
     title: 'Journal Articles'    
-  conferences:
+  inproceedings:
     title: 'Conference Papers'
+  misc:
+    title: 'Online'
+  online:
+    title: 'Online'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
