--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,9 @@ staticman:
     email                : "md5"
   generatedFields:
     date:
-      type               : "string"
+      type               : "date"
+      options:
+        format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
   hide                   : false     # change to true to hide the RSS feed in the footer
   path                   : # blank (default) uses feed.xml
