--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ author:
   avatar           : "profile.jpg"
   name             : "Meng Zhu"
   pronouns         : "he/his"  
-  bio              : "A Lecturer of ** University"
+  bio              : "A Lecturer of Jiangxi University of Finance and Economics"
   location         : "China"
-  employer         : "** University"
+  employer         : "Jiangxi University of Finance and Economics"
   uri              : # URL
   email            : "jxncmengzhu@gmail.com" 
 
