--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : "he/his"  
   bio              : "A Lecturer of Jiangxi University of Finance and Economics"
   location         : "China"
-  employer         : "Jiangxi University of Finance and Economics"
+  employer         : "JXUFE"
   uri              : # URL
   email            : "jxncmengzhu@gmail.com" 
 
