--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "profile.jpg"
   name             : "Meng Zhu"
-  gender           : "Male"  
+  pronouns         : "Mr."  
   bio              : "A Lecturer of JXUFE"
   location         : "China"
   employer         : "JXUFE"
