--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,8 +32,8 @@ main:
   - title: "CV"
     url: /cv/
     
-  # - title: "CV"
-  #   url: /cv-json/
+  - title: "CV"
+    url: /cv-json/
     
   # - title: "Guide"
   #   url: /markdown/
