--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "China"
   employer         : "JXUFE"
   uri              : # URL
-  email            : "jxncmengzhu@gmail.com" 
+  email            : "zhumeng@jxufe.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
